# Temporal_Insanity

./: #README.md#  .gitignore  LICENSE  README.md
Arduino/motor_setup/: motor.txt  motor_setup.ino
Arduino/motor_setup/motor_and_encoder_hello_world/: motor_and_encoder_hello_world.ino
Arduino/ros_code/Ros_arduino_motor/: Ros_arduino_motor.ino
Arduino/ros_code/Ros_arduino_servo/: Ros_arduino_servo.ino
Arduino/ros_code/Servo_motor/: Servo_motor.ino
Arduino/ros_code/sketch_feb06c/: sketch_feb06c.ino
Arduino/serial_communication/serial_setup/: serial_setup.ino  serial_setup.py
Arduino/servo_motor_keyboard_control/: servo_motor_keyboard_control.ino
Arduino/servo_setup/: servo.txt  servo_setup.ino
Arduino/servo_setup/servo_hello_world/: servo_hello_world.ino
Arduino/sketch_170202a/: sketch_170202a.pde
Gabriel/Code/: .project  opencv_test.py  test.txt
Gabriel/Code/Keras/: Conv_network.py  LSTM_three_char_to_One.py  RNN_image.py  Recurr_network_alphabet.py  create_dataset.py  mnist_dataset_sorted.py  my_model.h5  my_model_recurrent.h5  openCV_test.py  recurrent_Stateful.py  temporal_insanity.py
Gabriel/Code/Tensorflow/: .project  checkpoint  mnist_tut_model.ckpt.index  mnist_tut_model.index  mnist_tutorial.py  mnist_tutorial_deep.py  mnist_use.py
Gabriel/Code/ros_workspace/Recorded_data/dataset1/: data.txt
Gabriel/Code/ros_workspace/src/camera_node/: CMakeLists.txt  package.xml  setup.py
Gabriel/Code/ros_workspace/src/camera_node/src/: camera.py  camera_pub_cpp.cpp  camera_publisher.py  camera_rpi.py  camera_rpi_2.py  opencvtest.py
Gabriel/Code/ros_workspace/src/gpio_test/: CMakeLists.txt  package.xml
Gabriel/Code/ros_workspace/src/gpio_test/src/: gpio_test.cpp
Gabriel/Code/ros_workspace/src/interface/: CMakeLists.txt  package.xml
Gabriel/Code/ros_workspace/src/interface/examples/: gui_launch
Gabriel/Code/ros_workspace/src/interface/src/: GUI.glade  GUI.glade~  GUI.sublime-workspace  GUI_glade310.glade  GUI_glade310.glade~  a.out  button.cpp  button.hpp  gui.cpp  gui.hpp  icon.cpp  icon.hpp  image_show.cpp  image_show.hpp  main.cpp  talker.cpp  talker2.cpp
Gabriel/Code/ros_workspace/src/joystick/: CMakeLists.txt  package.xml  setup.py
Gabriel/Code/ros_workspace/src/joystick/src/: joystick.py
Martin/: .project  cv.py  exp2.py  experiment.py  experiment.py~  lstm.py  lstm_pic.h5  lstm_pic.py  lstm_pic_run.py  muh_model2.h5  opencv_helloworld.py  parallel.py  print.py  rnn.py
Martin/keras_helloworld/: py.py
